feat: update home page add new elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,8 +26,15 @@
 }
 
 body {
+  width: 100vw;
   color: var(--foreground);
   background: var(--background);
+  overflow-x: hidden;
+}
+
+html {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 @layer base {
